--- a/strict-base-types.cabal
+++ b/strict-base-types.cabal
@@ -3,42 +3,17 @@ Version:        0.6.1
 Synopsis:       Strict variants of the types provided in base.
 Category:       Data
 Description:
-     It is common knowledge that lazy datastructures can lead to space-leaks.
-     This problem is particularly prominent, when using lazy datastructures to
-     store the state of a long-running application in memory. The easiest
-     solution to this problem is to use fully strict types to store such state
-     values. By \"fully strict types\" we mean types for whose values it holds
-     that, if they are in weak-head normal form, then they are also in normal
-     form. Intuitively, this means that values of fully strict types cannot
-     contain unevaluated thunks.
+     This package builds on top of the
+     <http://hackage.haskell.org/package/strict strict> package, by including
+     more utilities and instances for type-classes from the @lens@, @aeson@,
+     and @QuickCheck@ packages. It also re-exports the modules from @strict@
+     under different names, that adhere to the more standard naming convention
+     that strictness variants of an existing datatype are identified by
+     suffixing \'Strict\' or \'Lazy\' in the module hierarchy.
      .
-     To define a fully strict datatype, one typically uses the following recipe.
-     .
-     1. Make all fields of every constructor strict; i.e., add a bang to
-        all fields.
-     .
-     2. Use only strict types for the fields of the constructors.
-     .
-     The second requirement is problematic as it rules out the use of
-     the standard Haskell 'Maybe', 'Either', and pair types. This library
-     solves this problem by providing strict variants of these types and their
-     corresponding standard support functions and type-class instances.
-     .
-     Note that this library does currently not provide fully strict lists.
-     They can be added if they are really required. However, in many cases one
-     probably wants to use unboxed or strict boxed vectors from the 'vector'
-     library (<http://hackage.haskell.org/package/vector>) instead of strict
-     lists.  Moreover, instead of @String@s one probably wants to use strict
-     @Text@ values from the @text@ library
-     (<http://hackage.haskell.org/package/text>).
-     .
-     This library comes with batteries included; i.e., missing instances
-     for type-classes from the @deepseq@, @binary@, @aeson@, @QuickCheck@, and
-     @lens@ packages are included. Of particluar interest is the @Strict@
-     type-class provided by the lens library
-     (<http://hackage.haskell.org/packages/archive/lens/3.9.0.2/doc/html/Control-Lens-Iso.html#t:Strict>).
-     It is used in the following example to simplify the modification of
-     strict fields.
+     Of particluar interest is the 'Control.Lens.Iso.Strict' type-class
+     provided by the lens library. It is used in the following example to
+     simplify the modification of strict fields.
      .
      > (-# LANGUAGE TemplateHaskell #-)   -- replace with curly braces,
      > (-# LANGUAGE OverloadedStrings #-) -- the Haddock prologues are a P.I.T.A!
@@ -74,22 +49,6 @@ Description:
      See
      <http://www.haskellforall.com/2013/05/program-imperatively-using-haskell.html>
      for a gentle introduction to lenses and state manipulation.
-     .
-     Note that this package uses the types provided by the 'strict' package
-     (<http://hackage.haskell.org/package/strict>), but organizes them a bit
-     differently. More precisely, the @strict-base-types@ package
-     .
-     - only provides the fully strict variants of types from 'base',
-     .
-     - is in-sync with the current base library (base-4.6),
-     .
-     - provides the missing instances for (future) Haskell platform packages, and
-     .
-     - conforms to the standard policy that strictness variants of an existing
-       datatype are identified by suffixing \'Strict\' or \'Lazy\' in the
-       module hierarchy.
-
-
 License:        BSD3
 License-File:   LICENSE
 Author:         Roman Leshchinskiy <rl@cse.unsw.edu.au>,
@@ -130,7 +89,7 @@ library
     , binary     >= 0.5
     , deepseq    >= 1.3
     , hashable   >= 1.1.1.0
-    , strict     >= 0.3.2 && <0.4
+    , strict     >= 0.4
     , bifunctors >= 3.0
     , ghc-prim
 
